[package]
name = "mt6816"
version = "0.1.1"
edition = "2024"
authors = ["Süha ÜNÜVAR"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/phycrax/mt6816-rs"
documentation = "https://docs.rs/mt6816/"
description = "Driver for MT6816 SPI Magnetic Encoder / Angle sensor"
keywords = ["encoder", "angle", "sensor", "spi", "embedded-hal-driver"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
features = ["defmt"]

[dependencies]
embedded-hal = "1"
document-features = "0.2"
defmt = { version = "1", optional = true }

[features]
## Use [`defmt`](https://docs.rs/defmt/latest/defmt/) for logging
defmt = ["dep:defmt", "embedded-hal/defmt-03"]
